Updated site content

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 <!--Video-->
     <section class="noprint">
         <div id="home" class="r c block">
-              <div class="r"style="padding:56.25% 0 0 0;position:relative;overflow:hidden;"><iframe src="https://player.vimeo.com/video/753294058?h=d787c213b6&autoplay=1&muted=1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Psalm Song - David Ko"></iframe></div>
+              <div class="r i"><iframe src="https://player.vimeo.com/video/753294058?h=d787c213b6&autoplay=1&muted=1&badge=0&autopause=0&player_id=0&app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen title="Psalm Song - David Ko"></iframe></div>
         </div>
     </section>
 <!--Main content-->
@@ -51,7 +51,9 @@
           <h1>About</h1>
           <img class="r img-about" src="portrait-kavid-do.jpg">
           <p>
-          David Ko was born in 1997 in Seoul, South Korea. He spent most of his youth in the suburbs of Canada, where he first learned to compose and play the piano. In  2014-15 he studied composition privately with <span class="n">Rodney Sharman</span>, and in 2015 he moved to Amsterdam to study at the <i>Conservatorium van Amsterdam</i>, where he studied with <span class="n">Joël Bons</span> and <span class="n">Richard Ayres</span> (BMus). He is currently completing his MMus in composition, and studies with <span class="n">Jorrit Tamminga</span> and <span class="n">Richard Ayres</span>. He has previously studied Classical piano with <span class="n">David Kuyken</span>.
+              Kavid Do was born in 1997 in Seoul, South Korea as David Ko. He grew up in a Vancouver suburb, where he went to church, learned to play the piano and compose. In 2014-15 he studied composition privately with <span class="n">Rodney Sharman</span>. In 2015, he moved to Amsterdam to study at the <i>Conservatorium van Amsterdam</i>, where he studied with <span class="n">Joël Bons</span> and <span class="n">Richard Ayres</span> (BMus). He is currently completing his MMus in composition, and studies with <span class="n">Jorrit Tamminga</span> and <span class="n">Richard Ayres</span>. He has previously studied Classical piano with <span class="n">David Kuyken</span>.
+              His music combines extended just intonation, recording technique, and sound design, in search of dreamlike sounds that evoke nostalgia and memories of childhood, in his case one of digital frenzies and functional, protestant aesthetics. His music has been performed in halls such as Korzo, Muziekgebouw <span class="n">aan 't IJ</span> and the <span class="n">Orpheum Annex</span> in Vancouver. He has collaborated with visual artists <span class="n">Monica Mays</span> and <span class="n">Min Oh</span> and theatre director <span class="n">Rebekka Nilsson</span>, both as a composer and performer. 
+              He has received scholarships from the Langley Community Music School, British Columbia Arts Council, and the Amsterdam School of the Arts. In 2018, his piece Let's Talk About Heritage received the SOCAN young composer's award.
       </p>
       <p>
       His music is primarily concerned with intersections between intonation theory, recording technique, and sound design. His music has been performed in halls such as Korzo, <span class="n">Muziekgebouw aan 't IJ</span> and the <span class="n">Orpheum Annex</span> in Vancouver. He has collaborated with visual artists Monica Mays and Min Oh and theatre director <span class="n">Rebekka Nilsson</span>,  both as a composer and performer. 
@@ -65,31 +67,35 @@
   
     <article id="upcoming" class="r l block">
         <h1>Upcoming projects</h1>
-        <h2>Psalm Songs </h2>
+        <h2>New work for Quatuor Bozzini</h2>
             <p>
-                April 29, Splendor<br>May 11, Composer's Festival, Conservatorium van Amsterdam 
+                (10.10.2023 — Gaudeamus Muziekweek, Utrecht) <br>
+                (11.2023 — Montreal)
             </p>
-        <h2>Untitled Opera</h2>
-            <p>
-                March 10-11, Opera Forward Festival
-        </p>
     </article>
   
   <article id="works" class="r l block">
       <h1>Works</h1>
-      <h2>The Psalm Song</h2>
+      <h2>Psalm Songs (Work-in-progress)</h2>
           <p>
-		  Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit amet..", comes from a line in section 1.10.32.</p>
-<p>
-		  The standard chunk of Lorem Ipsum used since the 1500s is reproduced below for those interested. Sections 1.10.32 and 1.10.33 from "de Finibus Bonorum et Malorum" by Cicero are also reproduced in their exact original form, accompanied by English versions from the 1914 translation by H. Rackham.
+          Music can communicate the memory of lived experiences through associative sounds that stimulate both the spirit and the viscera. Instruments, acoustic and digital, offer tones to  contribute to collective melodies, ranging from sober and clear, to hoarse and fragile. Do these melodies embody and reflect some ethical code, or have they simply come from the beyond?
+          </p>
+          <div class="i"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mZ1UnwAYR9o?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+      <h2>Gogak</h2>
+      <p>
+      An homage to traditional Korean music, for orchestra.
       </p>
+      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/588063189&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kaviddo" title="Kavid Do" target="_blank" style="color: #cccccc; text-decoration: none;">Kavid Do</a> · <a href="https://soundcloud.com/kaviddo/gog-ak" title="(곡악) Gog-Ak (2019)" target="_blank" style="color: #cccccc; text-decoration: none;">(곡악) Gog-Ak (2019)</a></div>
   </article>
   
   <article id="collaborations" class="r l block">
       <h1>Collaborations</h1>
-     <h2>Homies Prayers</h2> 
-         <p>
-             Homies Prayers is an ongoing performance collaboration with artist <span class="n">Monica Mays</span>. 
+      <h2>Homies Prayers</h2> 
+      <p>
+      Monica Mays asked me to make a medley of music for a performance piece around her sculptures
+      </p>
+      <p>
+          <a href="https://soundcloud.com/kaviddo/homiesprayersreel-mp3/s-5U03ASRvUCb?si=30d16a074b7e4c5ba48303e4835544f7">Listen to it here</a>.
          </p>
          <figure>
          <img class="r img-full" src="homies-prayers-amsterdam.jpg">
@@ -102,10 +108,13 @@
     
     <h2>Melqui</h2>
          <p>
-             The 7-piece band of Argentine composer <span class="n">Lautaro Hochman</span>. Melqui's music is an intimate one, comparable to <span class="n">Elliott Smith</span> or <span class="n">Connan Mockasin</span>, made of many layers of background vocals and guitar sounds, as well as Latin American and Indie music influences. 
+             Melqui is the band of Argentine singer and composer Lautaro Hochman.
+         </p>
+         <p>
+             In the first lockdown of 2020, we started recording and mixing his first EP.
              </p>
              <p>
-             <a class="noprint"href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ">Listen to the debut EP on Spotify.</a>
+             <a class="noprint"href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ">Listen to it here</a>.
              <figure class="printonly qr">
                  <img src="melqui-qr-code.png">
              <figcaption class="printonly">Listen to the debut EP on Spotify.</figcaption>
