--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
          </p>
          <figure>
          <img class="r img-full" src="homies-prayers-amsterdam.jpg">
-         <figcaption>(Come Together V, Frascati Theater, Amsterdam, 2020)</figcaption>
+         <figcaption>(<i>Come Together V</i>, Frascati Theater, Amsterdam, 2020)</figcaption>
          </figure>
          <figure>
          <img class="r img-full" src="homies-prayers-brussels.jpg">
-         <figcaption>(Art Brussels, Nosbaum Reding, Brussels, 2022)</figcaption>
+         <figcaption>(<i>Art Brussels</i>, Nosbaum Reding, Brussels, 2022)</figcaption>
          </figure>
     
     <h2>Melqui</h2>
