--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet"> 
 <link href="https://fonts.googleapis.com/css2?family=BIZ+UDMincho&display=swap" rel="stylesheet"> 
 
-  <meta name="description" content="David Ko is a West Coast Canadian of Korean descent.">
+  <meta name="description" content="Kavid Do was born in 1997 in Seoul, South Korea as David Ko. He grew up in a Vancouver suburb, where he went to church, learned to play the piano and compose. In 2014-15 he studied composition privately with Rodney Sharman. In 2015, he moved to Amsterdam to study at the Conservatorium van Amsterdam, where he studied with Joël Bons and Richard Ayres (BMus). He is currently completing his MMus in composition, and studies with Jorrit Tamminga and Richard Ayres.">
   <meta property="og:title" content="Kavid Do">
-  <meta property="og:description" content="David Ko is a West Coast Canadian of Korean descent.">
+  <meta property="og:description" content="Kavid Do was born in 1997 in Seoul, South Korea as David Ko. He grew up in a Vancouver suburb, where he went to church, learned to play the piano and compose. In 2014-15 he studied composition privately with Rodney Sharman. In 2015, he moved to Amsterdam to study at the Conservatorium van Amsterdam, where he studied with Joël Bons and Richard Ayres (BMus). He is currently completing his MMus in composition, and studies with Jorrit Tamminga and Richard Ayres.">
   <!-- <meta property="og:image" content=""> -->
   <!-- <meta property="og:image:alt" content="Image description"> -->
   <meta property="og:locale" content="en_US">
