--- a/index.html
+++ b/index.html
@@ -80,12 +80,13 @@
           <p>
           Music can communicate the memory of lived experiences through associative sounds that stimulate both the spirit and the viscera. Instruments, acoustic and digital, offer tones to  contribute to collective melodies, ranging from sober and clear, to hoarse and fragile. Do these melodies embody and reflect some ethical code, or have they simply come from the beyond?
           </p>
-          <div class="i"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mZ1UnwAYR9o?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+          <div class="noprint i"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mZ1UnwAYR9o?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
       <h2>Gogak</h2>
       <p>
       An homage to traditional Korean music, for orchestra.
       </p>
-      <iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/588063189&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kaviddo" title="Kavid Do" target="_blank" style="color: #cccccc; text-decoration: none;">Kavid Do</a> · <a href="https://soundcloud.com/kaviddo/gog-ak" title="(곡악) Gog-Ak (2019)" target="_blank" style="color: #cccccc; text-decoration: none;">(곡악) Gog-Ak (2019)</a></div>
+      <div class="noprint"><iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/588063189&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kaviddo" title="Kavid Do" target="_blank" style="color: #cccccc; text-decoration: none;">Kavid Do</a> · <a href="https://soundcloud.com/kaviddo/gog-ak" title="(곡악) Gog-Ak (2019)" target="_blank" style="color: #cccccc; text-decoration: none;">(곡악) Gog-Ak (2019)</a></div>
+  </div>
   </article>
   
   <article id="collaborations" class="r l block">
@@ -94,7 +95,7 @@
       <p>
       Monica Mays asked me to make a medley of music for a performance piece around her sculptures
       </p>
-      <p>
+      <p class="noprint">
           <a href="https://soundcloud.com/kaviddo/homiesprayersreel-mp3/s-5U03ASRvUCb?si=30d16a074b7e4c5ba48303e4835544f7">Listen to it here</a>.
          </p>
          <figure>
@@ -113,8 +114,8 @@
          <p>
              In the first lockdown of 2020, we started recording and mixing his first EP.
              </p>
-             <p>
-             <a class="noprint"href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ">Listen to it here</a>.
+             <p class="noprint">
+             <a href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ">Listen to it here</a>.
              <figure class="printonly qr">
                  <img src="melqui-qr-code.png">
              <figcaption class="printonly">Listen to the debut EP on Spotify.</figcaption>
