--- a/index.html
+++ b/index.html
@@ -51,15 +51,9 @@
           <h1>About</h1>
           <img class="r img-about" src="portrait-kavid-do.jpg">
           <p>
-              Kavid Do was born in 1997 in Seoul, South Korea as David Ko. He grew up in a Vancouver suburb, where he went to church, learned to play the piano and compose. In 2014-15 he studied composition privately with <span class="n">Rodney Sharman</span>. In 2015, he moved to Amsterdam to study at the <i>Conservatorium van Amsterdam</i>, where he studied with <span class="n">Joël Bons</span> and <span class="n">Richard Ayres</span> (BMus). He is currently completing his MMus in composition, and studies with <span class="n">Jorrit Tamminga</span> and <span class="n">Richard Ayres</span>. He has previously studied Classical piano with <span class="n">David Kuyken</span>.
+              Kavid Do was born in 1997 in Seoul, South Korea as David Ko. He grew up in a Vancouver suburb, where he went to church, learned to play the piano and compose. In 2014-15 he studied composition privately with <span class="n">Rodney Sharman</span>. In 2015, he moved to Amsterdam to study at the Conservatorium van Amsterdam, where he studied with <span class="n">Joël Bons</span> and <span class="n">Richard Ayres</span> (BMus). He is currently completing his MMus in composition, and studies with <span class="n">Jorrit Tamminga</span> and <span class="n">Richard Ayres</span>. He has previously studied Classical piano with <span class="n">David Kuyken</span>.
               His music combines extended just intonation, recording technique, and sound design, in search of dreamlike sounds that evoke nostalgia and memories of childhood, in his case one of digital frenzies and functional, protestant aesthetics. His music has been performed in halls such as Korzo, Muziekgebouw <span class="n">aan 't IJ</span> and the <span class="n">Orpheum Annex</span> in Vancouver. He has collaborated with visual artists <span class="n">Monica Mays</span> and <span class="n">Min Oh</span> and theatre director <span class="n">Rebekka Nilsson</span>, both as a composer and performer. 
-              He has received scholarships from the Langley Community Music School, British Columbia Arts Council, and the Amsterdam School of the Arts. In 2018, his piece Let's Talk About Heritage received the SOCAN young composer's award.
-      </p>
-      <p>
-      His music is primarily concerned with intersections between intonation theory, recording technique, and sound design. His music has been performed in halls such as Korzo, <span class="n">Muziekgebouw aan 't IJ</span> and the <span class="n">Orpheum Annex</span> in Vancouver. He has collaborated with visual artists Monica Mays and Min Oh and theatre director <span class="n">Rebekka Nilsson</span>,  both as a composer and performer. 
-      </p>
-      <p>
-          He has received scholarships from the Langley Community Music School, British Columbia Arts Council, and the Amsterdam School of the Arts. In 2018, his piece Let's Talk About Heritage received the SOCAN young composer's award. 
+              He has received scholarships from the Langley Community Music School, British Columbia Arts Council, and the Amsterdam School of the Arts. In 2018, his piece <i>Let's Talk About Heritage</i> received the SOCAN young composer's award.
       </p>
       <p class="p noprint">
       <a href="cv-kavid-do.pdf">CV</a></p>
