--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <p>
           Music can communicate the memory of lived experiences through associative sounds that stimulate both the spirit and the viscera. Instruments, acoustic and digital, offer tones to  contribute to collective melodies, ranging from sober and clear, to hoarse and fragile. Do these melodies embody and reflect some ethical code, or have they simply come from the beyond?
           </p>
-          <div class="noprint i"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mZ1UnwAYR9o?controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+          <div class="noprint i"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mZ1UnwAYR9o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
       <h2>Gogak</h2>
       <p>
       An homage to traditional Korean music, for orchestra.
