--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       Monica Mays asked me to make a medley of music for a performance piece around her sculptures
       </p>
       <p class="noprint">
-          <a href="https://soundcloud.com/kaviddo/homiesprayersreel-mp3/s-5U03ASRvUCb?si=30d16a074b7e4c5ba48303e4835544f7">Listen to it here</a>.
+          <a href="https://soundcloud.com/kaviddo/homiesprayersreel-mp3/s-5U03ASRvUCb?si=30d16a074b7e4c5ba48303e4835544f7">Listen to it here</a>
          </p>
          <figure>
          <img class="r img-full" src="homies-prayers-amsterdam.jpg">
@@ -113,7 +113,7 @@
              In the first lockdown of 2020, we started recording and mixing his first EP.
              </p>
              <p class="noprint">
-             <a href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ">Listen to it here</a>.
+             <a href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ">Listen to it here</a>
              <figure class="printonly qr">
                  <img src="melqui-qr-code.png">
              <figcaption class="printonly">Listen to the debut EP on Spotify.</figcaption>
