--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <article id="contact" class="r l block">
       <h1>Contact</h1>
       <nav class="p noprint">
-      <a href="mailto:kavidjcdo@gmail.com">E-mail</a> <a href="https://www.instagram.com/kavid.do/">Instagram</a>
+      <a href="&#x006D;&#x0061;&#x0069;&#x006C;&#x0074;&#x006F;&#x003A;&#x006B;&#x0061;&#x0076;&#x0069;&#x0064;&#x006A;&#x0063;&#x0064;&#x006F;&#x0040;&#x0067;&#x006D;&#x0061;&#x0069;&#x006C;&#x002E;&#x0063;&#x006F;&#x006D;">E-mail</a> <a href="https://www.instagram.com/kavid.do/">Instagram</a>
       </nav>
       <p class="p printonly">Email: kavidjcdo@gmail.com<br>Instagram: @kavid.do</p>
   </article>
