--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
   
   <article id="works" class="r l block">
       <h1>Works</h1>
-      <h2>Psalm Songs (Work-in-progress)</h2>
+      <h2>Psalm Songs (Ongoing)</h2>
+          <p>
+              Psalm Songs are an ongoing series of pieces written for and played by the Amsterdam-based Mellonta Collective and myself on electronics. 
+          </p>
           <p>
           Music can communicate the memory of lived experiences through associative sounds that stimulate both the spirit and the viscera. Instruments, acoustic and digital, offer tones to  contribute to collective melodies, ranging from sober and clear, to hoarse and fragile. Do these melodies embody and reflect some ethical code, or have they simply come from the beyond?
           </p>
