--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
           Music can communicate the memory of lived experiences through associative sounds that stimulate both the spirit and the viscera. Instruments, acoustic and digital, offer tones to  contribute to collective melodies, ranging from sober and clear, to hoarse and fragile. Do these melodies embody and reflect some ethical code, or have they simply come from the beyond?
           </p>
           <div class="noprint i"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mZ1UnwAYR9o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
-      <h2>Gogak</h2>
+      <h2>Gog-Ak</h2>
       <p>
       An homage to traditional Korean music, for orchestra.
       </p>
-      <div class="noprint"><iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/588063189&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kaviddo" title="Kavid Do" target="_blank" style="color: #cccccc; text-decoration: none;">Kavid Do</a> · <a href="https://soundcloud.com/kaviddo/gog-ak" title="(곡악) Gog-Ak (2019)" target="_blank" style="color: #cccccc; text-decoration: none;">(곡악) Gog-Ak (2019)</a></div>
+      <div class="noprint"><iframe width="100%" height="166" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/588063189&color=%23000000&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe><div style="font-size: 10px; color: #cccccc;line-break: anywhere;word-break: normal;overflow: hidden;white-space: nowrap;text-overflow: ellipsis; font-family: Interstate,Lucida Grande,Lucida Sans Unicode,Lucida Sans,Garuda,Verdana,Tahoma,sans-serif;font-weight: 100;"><a href="https://soundcloud.com/kaviddo" title="Kavid Do" target="_blank" style="color: #cccccc; text-decoration: none;">Kavid Do</a> · <a href="https://soundcloud.com/kaviddo/gog-ak" title="(곡악) Gog-Ak (2019)" target="_blank" rel="noopener noreferrer" style="color: #cccccc; text-decoration: none;">(곡악) Gog-Ak (2019)</a></div>
   </div>
   </article>
   
@@ -97,7 +97,7 @@
       Monica Mays asked me to make a medley of music for a performance piece around her sculptures
       </p>
       <p class="noprint">
-          <a href="https://soundcloud.com/kaviddo/homiesprayersreel-mp3/s-5U03ASRvUCb?si=30d16a074b7e4c5ba48303e4835544f7">Listen to it here</a>
+          <a href="https://soundcloud.com/kaviddo/homiesprayersreel-mp3/s-5U03ASRvUCb?si=30d16a074b7e4c5ba48303e4835544f7" target="_blank" rel="noopener noreferrer">Listen to it here</a>
          </p>
          <figure>
          <img class="r img-full" src="homies-prayers-amsterdam.jpg">
@@ -116,7 +116,7 @@
              In the first lockdown of 2020, we started recording and mixing his first EP.
              </p>
              <p class="noprint">
-             <a href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ">Listen to it here</a>
+             <a href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ" target="_blank" rel="noopener noreferrer">Listen to it here</a>
              <figure class="printonly qr">
                  <img src="melqui-qr-code.png">
              <figcaption class="printonly">Listen to the debut EP on Spotify.</figcaption>
@@ -127,9 +127,9 @@
   <article id="contact" class="r l block">
       <h1>Contact</h1>
       <nav class="p noprint">
-      <a href="&#x006D;&#x0061;&#x0069;&#x006C;&#x0074;&#x006F;&#x003A;&#x006B;&#x0061;&#x0076;&#x0069;&#x0064;&#x006A;&#x0063;&#x0064;&#x006F;&#x0040;&#x0067;&#x006D;&#x0061;&#x0069;&#x006C;&#x002E;&#x0063;&#x006F;&#x006D;">E-mail</a> <a href="https://www.instagram.com/kavid.do/">Instagram</a>
+      <a href="&#x006D;&#x0061;&#x0069;&#x006C;&#x0074;&#x006F;&#x003A;&#x006B;&#x0061;&#x0076;&#x0069;&#x0064;&#x006A;&#x0063;&#x0064;&#x006F;&#x0040;&#x0067;&#x006D;&#x0061;&#x0069;&#x006C;&#x002E;&#x0063;&#x006F;&#x006D;">E-mail</a> <a href="https://www.instagram.com/kavid.do/" target="_blank" rel="noopener noreferrer">Instagram</a>
       </nav>
-      <p class="p printonly">Email: kavidjcdo@gmail.com<br>Instagram: @kavid.do</p>
+      <p class="p printonly">Email: &#x006B;&#x0061;&#x0076;&#x0069;&#x0064;&#x006A;&#x0063;&#x0064;&#x006F;&#x0040;&#x0067;&#x006D;&#x0061;&#x0069;&#x006C;&#x002E;&#x0063;&#x006F;&#x006D;<br>Instagram: @kavid.do</p>
   </article>
 </section>
 <!--Menu-->
