--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
         <h1>Upcoming projects</h1>
         <h2>New work for Quatuor Bozzini</h2>
             <p>
-                (10.10.2023 — Gaudeamus Muziekweek, Utrecht) <br>
-                (11.2023 — Montreal)
+                10.10.2023 — Gaudeamus Muziekweek, Utrecht <br>
+                11.2023 — Montreal
             </p>
     </article>
   
@@ -81,7 +81,15 @@
           <p>
           Music can communicate the memory of lived experiences through associative sounds that stimulate both the spirit and the viscera. Instruments, acoustic and digital, offer tones to  contribute to collective melodies, ranging from sober and clear, to hoarse and fragile. Do these melodies embody and reflect some ethical code, or have they simply come from the beyond?
           </p>
-          <div class="noprint i"><iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mZ1UnwAYR9o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+          <figure>
+          <img class="r img-full" src="psalm-song-1.jpg">
+          <figcaption><i>Psalm Song 1</i>, Muziekgebouw <span class="n">aan 't IJ</span>, Amsterdam, 2022 <a href="#home">↑</a></figcaption>
+          </figure>
+          <figure>
+          <div class="noprint i r">
+              <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mZ1UnwAYR9o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+          <figcaption style="margin-top:5px;"><i>Psalm Song 2</i>, Conservatorium van Amsterdam, Amsterdam, 2023</figcaption>
+          </figure>
       <h2>Gog-Ak</h2>
       <p>
       An homage to traditional Korean music, for orchestra.
@@ -101,11 +109,11 @@
          </p>
          <figure>
          <img class="r img-full" src="homies-prayers-amsterdam.jpg">
-         <figcaption>(<i>Come Together V</i>, Frascati Theater, Amsterdam, 2020)</figcaption>
+         <figcaption><i>Come Together V</i>, Frascati Theater, Amsterdam, 2020</figcaption>
          </figure>
          <figure>
          <img class="r img-full" src="homies-prayers-brussels.jpg">
-         <figcaption>(<i>Art Brussels</i>, Nosbaum Reding, Brussels, 2022)</figcaption>
+         <figcaption><i>Art Brussels</i>, Nosbaum Reding, Brussels, 2022</figcaption>
          </figure>
     
     <h2>Melqui</h2>
