--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       <h1>Works</h1>
       <h2>Psalm Songs (Ongoing)</h2>
           <p>
-              Psalm Songs are an ongoing series of pieces written for and played by the Amsterdam-based Mellonta Collective and myself on electronics. 
+              Psalm Songs are an ongoing series of pieces written for and played by the Amsterdam-based Mellonta Collective and Kavid Do on electronics. 
           </p>
           <p>
           Music can communicate the memory of lived experiences through associative sounds that stimulate both the spirit and the viscera. Instruments, acoustic and digital, offer tones to  contribute to collective melodies, ranging from sober and clear, to hoarse and fragile. Do these melodies embody and reflect some ethical code, or have they simply come from the beyond?
@@ -102,7 +102,7 @@
       <h1>Collaborations</h1>
       <h2>Homies Prayers</h2> 
       <p>
-      Monica Mays asked me to make a medley of music for a performance piece around her sculptures
+      A medley of music for a performance piece around Monica Mays' sculptures
       </p>
       <p class="noprint">
           <a href="https://soundcloud.com/kaviddo/homiesprayersreel-mp3/s-5U03ASRvUCb?si=30d16a074b7e4c5ba48303e4835544f7" target="_blank" rel="noopener noreferrer">Listen to it here</a>
@@ -118,10 +118,10 @@
     
     <h2>Melqui</h2>
          <p>
-             Melqui is the band of Argentine singer and composer Lautaro Hochman.
+             Melqui is the band of Argentine singer and composer Lautaro Hochman, featuring contributions by Kavid Do.
          </p>
          <p>
-             In the first lockdown of 2020, we started recording and mixing his first EP.
+             In the first lockdown of 2020, the band started recording and mixing their first EP.
              </p>
              <p class="noprint">
              <a href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ" target="_blank" rel="noopener noreferrer">Listen to it here</a>
