--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
 <!--Menu-->
 <footer class="noprint">
     <article id="menu" class="r l block">
-        <h1 class="p n hi sc"><a style="text-decoration:none!important;" href="#home"tabindex="1">David Ko</a></h1>
+        <h1 class="p n hi sc"><a style="text-decoration:none!important;" href="#home"tabindex="1">Kavid Do</a></h1>
         <nav class="p n sc">
             <a href="#about"tabindex="1">About</a>
             <a href="#upcoming"tabindex="1">Upcoming</a>
