--- a/index.html
+++ b/index.html
@@ -51,13 +51,13 @@
           <h1>About</h1>
           <img class="r img-about" src="portrait-kavid-do.jpg">
           <p>
-              Kavid Do was born in 1997 in Seoul, South Korea as David Ko. He grew up in a Vancouver suburb, where he went to church, learned to play the piano and compose. In 2014-15 he studied composition privately with <span class="n">Rodney Sharman</span>. In 2015, he moved to Amsterdam to study at the Conservatorium van Amsterdam, where he studied with <span class="n">Joël Bons</span> and <span class="n">Richard Ayres</span> (BMus). He is currently completing his MMus in composition, and studies with <span class="n">Jorrit Tamminga</span> and <span class="n">Richard Ayres</span>. He has previously studied Classical piano with <span class="n">David Kuyken</span>.
+Kavid Do was born in 1997 in Seoul, South Korea as David Ko. He grew up in a Vancouver suburb, where he went to church, learned to play the piano, and compose. In 2014-15 he studied composition privately with <span class="n">Rodney Sharman.</span> In 2015, he moved to Amsterdam to study at the Conservatorium van Amsterdam, where he studied with <span class="n">Joël Bons</span> and <span class="n">Richard Ayres</span> (BMus). He is currently completing his MMus in composition, and studies with <span class="n">Jorrit Tamminga</span> and <span class="n">Richard Ayres.</span> He has previously studied Classical piano with <span class="n">David Kuyken.</span>
           </p>
               <p>
-              His music combines extended just intonation, recording technique, and sound design, in search of dreamlike sounds that evoke nostalgia and memories of childhood, in his case one of digital frenzies and functional, protestant aesthetics. His music has been performed in halls such as Korzo, Muziekgebouw <span class="n">aan 't IJ</span> and the <span class="n">Orpheum Annex</span> in Vancouver. He has collaborated with visual artists <span class="n">Monica Mays</span> and <span class="n">Min Oh</span> and theatre director <span class="n">Rebekka Nilsson</span>, both as a composer and performer. 
+Kavid is fascinated by music's ability to evoke feelings and imagery through associative sounds, which he probes through digital and acoustic means, synthesizing microtonality, instrumental writing, and music production techniques — an approach that is as much indebted to the Western Classical music tradition as it is the Internet. His music has been performed in halls such as Korzo, Muziekgebouw <span class="n">aan 't IJ</span> and the <span class="n">Orpheum Annex,</span> in Vancouver. He has collaborated with visual artists <span class="n">Monica Mays</span> and <span class="n">Min Oh,<span> and theatre director <span class="n">Rebekka Nilsson,</span> both as a composer and performer. In 2022, he received the NORMA Starterfonds to fund the production of his piece, <span class="n">Psalm Song 2.</span> He has previously also produced for the band Melqui. 
               </p>
                   <p>
-              He has received scholarships from the Langley Community Music School, British Columbia Arts Council, and the Amsterdam School of the Arts. In 2018, his piece <i>Let's Talk About Heritage</i> received the SOCAN young composer's award.
+He has received scholarships from the Langley Community Music School, British Columbia Arts Council, and the Amsterdam Hogeschool voor de Kunsten. In 2018, his piece Let's Talk About Heritage received the SOCAN young composer's award.
       </p>
       <p class="p noprint">
       <a href="cv-kavid-do.pdf">CV</a></p>
@@ -68,7 +68,7 @@
         <h2>New work for Quatuor Bozzini</h2>
             <p>
                 10.10.2023 — Gaudeamus Muziekweek, Utrecht <br>
-                11.2023 — Montreal
+                22.09.2023 — Le Vivier, Montreal 
             </p>
     </article>
   
@@ -76,7 +76,7 @@
       <h1>Works</h1>
       <h2>Psalm Songs (Ongoing)</h2>
           <p>
-              Psalm Songs are an ongoing series of pieces written for and played by the Amsterdam-based Mellonta Collective and Kavid Do on electronics. 
+              Psalm Songs are an ongoing series of pieces written for and played by the Amsterdam-based Mellonta Collective and myself on electronics. 
           </p>
           <p>
           Music can communicate the memory of lived experiences through associative sounds that stimulate both the spirit and the viscera. Instruments, acoustic and digital, offer tones to  contribute to collective melodies, ranging from sober and clear, to hoarse and fragile. Do these melodies embody and reflect some ethical code, or have they simply come from the beyond?
@@ -87,7 +87,7 @@
           </figure>
           <figure>
           <div class="noprint i r">
-              <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/mZ1UnwAYR9o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
+              <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/Uc2JReDkxXY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
           <figcaption style="margin-top:5px;"><i>Psalm Song 2</i>, Conservatorium van Amsterdam, Amsterdam, 2023</figcaption>
           </figure>
       <h2>Gog-Ak</h2>
@@ -102,7 +102,7 @@
       <h1>Collaborations</h1>
       <h2>Homies Prayers</h2> 
       <p>
-      A medley of music for a performance piece around Monica Mays' sculptures
+      Monica Mays asked me to make a medley of music for a performance piece around her sculptures
       </p>
       <p class="noprint">
           <a href="https://soundcloud.com/kaviddo/homiesprayersreel-mp3/s-5U03ASRvUCb?si=30d16a074b7e4c5ba48303e4835544f7" target="_blank" rel="noopener noreferrer">Listen to it here</a>
@@ -118,10 +118,10 @@
     
     <h2>Melqui</h2>
          <p>
-             Melqui is the band of Argentine singer and composer Lautaro Hochman, featuring contributions by Kavid Do.
+             Melqui is the band of Argentine singer and composer Lautaro Hochman.
          </p>
          <p>
-             In the first lockdown of 2020, the band started recording and mixing their first EP.
+             In the first lockdown of 2020, we started recording and mixing his first EP.
              </p>
              <p class="noprint">
              <a href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ" target="_blank" rel="noopener noreferrer">Listen to it here</a>
