--- a/index.html
+++ b/index.html
@@ -67,8 +67,30 @@ He has received scholarships from the Langley Community Music School, British Co
         <h1>Upcoming projects</h1>
         <h2>New work for Quatuor Bozzini</h2>
             <p>
-                10.10.2023 — Gaudeamus Muziekweek, Utrecht <br>
-                22.09.2023 — Le Vivier, Montreal 
+                <table>
+                    <tr>
+                        <td>
+                            10.10.2023
+                        </td>
+                        <td>
+                            —
+                        </td>
+                        <td>
+                            Gaudeamus Muziekweek, Utrecht
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            22.09.2023
+                        </td>
+                        <td>
+                            -
+                        </td>
+                        <td>
+                            Le Vivier, Montreal
+                        </td>
+                    </tr>
+            </table>
             </p>
     </article>
   
@@ -121,7 +143,7 @@ He has received scholarships from the Langley Community Music School, British Co
              Melqui is the band of Argentine singer and composer Lautaro Hochman.
          </p>
          <p>
-             In the first lockdown of 2020, we started recording and mixing his first EP.
+             In the first lockdown of 2020, <span class="n">we started</span> recording and mixing his <span class="n">first EP.</span>
              </p>
              <p class="noprint">
              <a href="https://open.spotify.com/album/6x791hd397JHp76aM3Xi3A?si=lV-dRkBsRCi8hPGMPFH-MQ" target="_blank" rel="noopener noreferrer">Listen to it here</a>
