--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ Kavid Do was born in 1997 in Seoul, South Korea as David Ko. He grew up in a Van
 Kavid is fascinated by music's ability to evoke feelings and imagery through associative sounds, which he probes through digital and acoustic means, synthesizing microtonality, instrumental writing, and music production techniques — <span class="n">an approach</span> that is as much indebted to the Western Classical music tradition as it is the Internet. His music has been performed in halls such as Korzo, Muziekgebouw <span class="n">aan 't IJ</span> and the <span class="n">Orpheum Annex</span> in Vancouver. He has collaborated with visual artists <span class="n">Monica Mays</span> and <span class="n">Min Oh,</span> and theatre director <span class="n">Rebekka Nilsson,</span> both as a composer and performer. In 2022, he received the NORMA starterfonds to fund the production of his piece, Psalm Song 2. He has previously mixed, recorded, and produced for the <span class="n">band Melqui.</span>
               </p>
                   <p>
-He has received scholarships from the Langley Community Music School, British Columbia Arts Council, and the Amsterdam Hogeschool voor de Kunsten. In 2018, his piece Let's Talk About Heritage received the SOCAN young <span class="n">composer's award.</span>
+He has received scholarships from the Langley Community Music School, British Columbia Arts Council, and the Amsterdam Hogeschool voor de Kunsten. In 2018, his piece <i>Let's Talk About Heritage</i> received the SOCAN young <span class="n">composer's award.</span>
       </p>
       <p class="p noprint">
       <a href="cv-kavid-do.pdf">CV</a></p>
